add : session func for username drawing

--- a/docker/flask_image/templates/rps_form.html
+++ b/docker/flask_image/templates/rps_form.html
@@ -7,7 +7,7 @@
 </script></head>
 <body>
     <form action="/rps_result" method="post">
-        name : <input type="text" name="name" value="noname"/>
+        name : <input type="text" name="name" value={{user_name}} />
         <fieldset>
         <legend>Rock-paper-scissors</legend>
         <p><label><input type="radio" name="value" value="0">rock</label></p>
