--- a/docker/flask_image/setup/templates/rps_result.html
+++ b/docker/flask_image/setup/templates/rps_result.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<title>title</title>
+<title>rps_result</title>
 <script>
 
 </script></head>
@@ -10,7 +10,6 @@ you are {{get_val}}<br>
 I am {{duel_val}}<br>
 
 then, you are {{res}}<br>
-@{{duel_time}}<br>
 <br>
 <br>
 <button onclick="location.href='/rps'">one more</button>
